--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
 	<div class="container">
+	<img src="drawing2.svg" alt="Logo" />
 		<h1>Cidades e Estados do Brasil</h1>
 		<form class="search-form">
 			<input type="text" class="search" placeholder="Cidade ou Estado">
