--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 	<div class="container">
 	<img src="drawing2.svg" alt="Logo" />
-		<h1>Cidades e Estados do Brasil</h1>
+		<h1>Cidades e Estados do <span class="nome-pais">Brasil</span></h1>
 		<form class="search-form">
 			<input type="text" class="search" placeholder="Cidade ou Estado">
 			<ul class="suggestions">
